# rust-sdl2-demos

./: .gitattributes  Cargo.toml  LICENSE  Notes.md  README.md  build.rs
src/: alphablend.rs  colorkeying.rs  geometry.rs  imagetest.rs  lib.rs  main.rs  setup.rs  simplereblitted.rs  simplesurface.rs  simplewindow.rs  spritesheet.rs  surfacekeyswaps.rs  texturerenderer.rs  timer.rs  truetypefonts.rs  viewport.rs
